removed more icon from favorites and fixed spacing for homepage grid on mobile

--- a/client/src/components/list/List.scss
+++ b/client/src/components/list/List.scss
@@ -79,6 +79,13 @@
 @media (max-width: 700px) {
   .list {
     margin-top: 20px;
+
+    .noItems {
+      p {
+        text-align: center;
+        margin-top: 50px;
+      }
+    }
   }
 }
 
