--- a/client/src/components/options/Options.scss
+++ b/client/src/components/options/Options.scss
@@ -45,6 +45,7 @@
         font-size: 16px;
         letter-spacing: 1px;
         color: rgb(87, 87, 87);
+        margin-bottom: 60px;
 
         .cat {
           text-align: center;
@@ -52,7 +53,7 @@
           border-width: 1px;
           border-color: rgb(219, 219, 219);
           border-radius: 5%;
-          margin-bottom: 3em;
+          margin-bottom: 1em;
           height: 200px;
           width: 200px;
           background-color: rgb(255, 255, 255);
